--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
